# josuttis-cpp17-examples

./: CMakeLists.txt  README.md
cmake/: devtoolset.cmake  stringPrefix.cmake
filesystem/: CMakeLists.txt
lang/: CMakeLists.txt
lib/: CMakeLists.txt  parforeachloop.cpp
pmr/: CMakeLists.txt
poly/: CMakeLists.txt
poly/inherit/: CMakeLists.txt
poly/shared/: CMakeLists.txt
poly/unique/: CMakeLists.txt
poly/variant/: CMakeLists.txt
tmpl/: CMakeLists.txt
